[gd_scene load_steps=4 format=3 uid="uid://dors3ae30tcsp"]

[ext_resource type="Texture2D" uid="uid://dua1bw431itvw" path="res://2023-08-05_11-20.png" id="1_842c7"]
[ext_resource type="Script" path="res://CENAS/modo de jogo/modo_de_jogo.gd" id="1_re7ab"]
[ext_resource type="FontFile" uid="uid://nkls8r0b2d2p" path="res://texto/QuinqueFive.ttf" id="2_tjlny"]

[node name="modo de jogo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_re7ab")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.10056, 1.63635)
texture = ExtResource("1_842c7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.1575
anchor_top = 0.00333333
anchor_right = 0.13
anchor_bottom = 0.151667
offset_left = 164.0
offset_top = 64.0
offset_right = 664.0
offset_bottom = 464.0
scale = Vector2(1, 0.921)
theme_override_constants/separation = 50
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tjlny")
theme_override_font_sizes/font_size = 40
text = "SELECIONE O 
MODO DE JOGO"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="História" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tjlny")
theme_override_font_sizes/font_size = 30
text = "HISTORIA"

[node name="Casual" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tjlny")
theme_override_font_sizes/font_size = 30
text = "CASUAL"

[node name="Voltar" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tjlny")
theme_override_font_sizes/font_size = 30
text = "VOLTAR"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/História" to="." method="_on_história_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Casual" to="." method="_on_casual_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Voltar" to="." method="_on_voltar_pressed"]
