extends Control



func _on_história_pressed():
	pass # Replace with function body.



func _on_casual_pressed():
	get_tree().change_scene_to_file("res://CENAS/pontuação/safe_pontuação.tscn")
	pass # Replace with function body.



func _on_voltar_pressed():
	get_tree().change_scene_to_file("res://MENU/menu.tscn")
	pass # Replace with function body.
